--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -87,7 +87,9 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
-
+    <div class="overlay" ng-hide="online">
+    </div>
+    <div  class="alert alert-danger alertPanel" ng-hide="online" ng-cloak>You are offline</div>
     <div class="alert {{alert.type}} alert-dismissible alertPanel" role="alert" ng-show="alert">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       {{alert.message}}
@@ -99,7 +101,7 @@
         <a class="btn btn-lg btn-um" style="font-size:35px" onclick="window.location.href='/accounts/login/'">Login</a>
       </div>
     </div>
-  
+
     <leaflet lf-center="center" controls="controls" layers="layers" markers="markersFiltered" width="100%"></leaflet>
 
     <!-- Create Modal -->
