--- a/mbofui/app/text-only.html
+++ b/mbofui/app/text-only.html
@@ -11,7 +11,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" media="screen">
 </head>
-
 <body ng-controller="mapController" ng-cloak>
 
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -82,6 +81,9 @@
 
   <div role="main">
     <div id="text_only"></div>
+    <div class="alert alert-danger" ng-hide="online" ng-cloak>You are offline</div>
+    <div class="overlay" ng-hide="online">
+    </div>
     <div class="alert alert-info" style="margin:10px" ng-show="!textEvents.length" ng-cloak>
       No {{currentView | lowercase}} {{selectedCategory}} events available.
     </div>
