TLMBLGIS-179 - add new mark comm branding

--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -53,7 +53,7 @@
               <li><a href="#" ng-click="filter_category('all')">All categories</a></li>
             </ul>
           </li>
-          <li ng-show="category" class="visible-lg-inline visible-md-inline"><p class="navbar-text">Showing: {{category}}</p></li>
+          <li ng-show="category" class="visible-lg-inline visible-md-inline"><p class="navbar-text plainLink">Showing: {{category}}</p></li>
         </ul>
         <form class="navbar-form navbar-left" role="search">
           <div class="form-group">
@@ -63,7 +63,7 @@
         </form>
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="" ng-click="switchModes('text')">Text only</a></li>
+          <li><a href="" ng-click="switchModes('text')" class="plainLink">Text only</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Showing {{currentView}} <span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -96,9 +96,13 @@
     </div>
 
     <div ng-show="!loggedin" class="logo-login">
-      <div class="logo-peacock">
-        <a class="btn btn-lg btn-um" style="font-size:35px" onclick="window.location.href='/accounts/login/'">Login</a>
+      <div class="splash visible-md-block visible-lg-block visible-sm-block">
+        <a class="btn btn-lg btn-um" style="font-size:25px" onclick="window.location.href='/accounts/login/'">Login</a>
       </div>
+      <div class="splash splash-small visible-xs-block">
+        <a class="btn btn-lg btn-um" style="font-size:25px" onclick="window.location.href='/accounts/login/'">Login</a>
+      </div>
+
     </div>
 
     <leaflet lf-center="center" controls="controls" layers="layers" markers="markersFiltered" width="100%"></leaflet>
