--- a/mbofui/app/text-only.html
+++ b/mbofui/app/text-only.html
@@ -30,7 +30,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="ocellusNav">
         <ul class="nav navbar-nav">
-          <li><a href="" data-toggle="modal" data-target="#coordsLookUpModal" title="Input Address">Create event</a></li>
+          <li><a href="" data-toggle="modal" data-target="#coordsLookUpModal" title="Input Address" class="plainLink">Create event</a></li>
         </ul>
 
         <ul class="nav navbar-nav">
@@ -52,7 +52,7 @@
 
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="" ng-click="switchModes('map')">Map</a></li>
+          <li><a href="" ng-click="switchModes('map')" class="plainLink">Map</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Showing {{currentView}} <span class="caret"></span></a>
             <ul class="dropdown-menu">
