--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -64,6 +64,7 @@
 
         <ul class="nav navbar-nav navbar-right">
           <li><a href="" ng-click="switchModes('text')" class="plainLink">Text only</a></li>
+          <li><a href="#"  ng-click="logout()" class="plainLink">Logout</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Showing {{currentView}} <span class="caret"></span></a>
             <ul class="dropdown-menu">
