--- a/mbofui/app/text-only.html
+++ b/mbofui/app/text-only.html
@@ -53,7 +53,6 @@
 
         <ul class="nav navbar-nav navbar-right">
           <li><a href="" ng-click="switchModes('map')" class="plainLink">Map</a></li>
-          <li><a href="#"  ng-click="logout()" class="plainLink">Logout</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Showing {{currentView}} <span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -73,6 +72,13 @@
               -->
             </ul>
           </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"></span> <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#"  ng-click="logout()">Logout</a></li>
+            </ul>
+          </li>
+
         </ul>
       </div>
       <!-- /.navbar-collapse -->
