TLMBLGIS-183 - add same nav config to text only view

--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -42,7 +42,7 @@
               <li><a href="" data-toggle="modal" data-target="#coordsLookUpModal" title="Create event at specified address">Create event at specified address</a></li>
             </ul>
           </li>
-          <li><a href="" ng-click="switchModes('text')" class="plainLink">Text only</a></li>
+          <li><a href="" ng-click="switchModes('text')" class="plainLink"><span class="glyphicon glyphicon-list"></span><span class="sr-only">Text only</span></a></li>
         </ul>
 
         <ul class="nav navbar-nav">
