--- a/mbofui/app/text-only.html
+++ b/mbofui/app/text-only.html
@@ -31,28 +31,27 @@
       <div class="collapse navbar-collapse" id="ocellusNav">
         <ul class="nav navbar-nav">
           <li><a href="" data-toggle="modal" data-target="#coordsLookUpModal" title="Input Address" class="plainLink">Create event</a></li>
+          <li><a href="" ng-click="switchModes('map')" class="plainLink">Map</a></li>
         </ul>
 
-        <ul class="nav navbar-nav">
+
+
+
+        <ul class="nav navbar-nav navbar-right">
+          <form class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+              <label for="searchText" class="sr-only">Search events</label>
+              <input  id="searchText" type="text" class="form-control" placeholder="Search" value="" ng-model="textEventsFilter">
+            </div>
+          </form>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Filter by category <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Filter by category <span ng-show="category"  class="visible-lg-inline">({{category}})</span> <span class="caret"></span></a>
             <ul class="dropdown-menu" id="categories">
               <li ng-repeat="category in event_categories"><a href="#" ng-click="filter_category(category)">{{category}}</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="#" ng-click="filter_category('all')">All categories</a></li>
             </ul>
           </li>
-        </ul>
-        <form class="navbar-form navbar-left" role="search">
-          <div class="form-group">
-            <label for="searchText" class="sr-only">Search events</label>
-            <input  id="searchText" type="text" class="form-control" placeholder="Search" value="" ng-model="textEventsFilter">
-          </div>
-        </form>
-
-
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="" ng-click="switchModes('map')" class="plainLink">Map</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Showing {{currentView}} <span class="caret"></span></a>
             <ul class="dropdown-menu">
