--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -50,16 +50,10 @@
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-          <form class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-              <label for="searchText" class="sr-only">Search events</label>
-              <input type="text" id="searchText" class="form-control" placeholder="Search" value="" ng-model="markerFilter">
-            </div>
-          </form>
-
 
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{category || 'All Events'}}
+              <span ng-show="category && category !=='All Events'"> Events</span>
               <span class="caret"></span></a>
             <ul class="dropdown-menu" id="categories">
               <li ng-repeat="category in event_categories"><a href="#" ng-click="filter_category(category)">{{category}}</a></li>
@@ -67,7 +61,14 @@
               <li><a href="#" ng-click="filter_category('All Events')">All Events</a></li>
             </ul>
           </li>
-
+          <li>
+            <form class="navbar-form navbar-left" role="search">
+              <div class="form-group">
+                <label for="searchText" class="sr-only">Search events</label>
+                <input type="text" id="searchText" class="form-control" placeholder="Search" value="" ng-model="markerFilter">
+              </div>
+            </form>
+          </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Showing {{currentView}} <span class="caret"></span></a>
             <ul class="dropdown-menu">
