--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -70,7 +70,11 @@
             </form>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Showing {{currentView}} <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              <span class="hidden-sm hidden-md">Showing</span>
+              <span class="hidden-lg hidden-xs" style="text-transform: capitalize">{{currentView}}</span>
+              <span class="hidden-sm hidden-md">{{currentView}}</span>
+              <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="" ng-click="switchViews('/api/events/current/','current')">Current</a></li>
               <li><a href="" ng-click="switchViews('/api/events/upcoming/','upcoming')">Upcoming</a></li>
