--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -207,7 +207,7 @@
    <script src="bower_components/angular/angular.js"></script>
    <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.min.js">
    </script>
-   <script src="../bower_components/leaflet-plugins/layer/tile/Google.js"></script>
+   <script src="bower_components/leaflet-plugins/layer/tile/Google.js"></script>
    <script src="bower_components/jquery/jquery.min.js"></script>
    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
    <script src="bower_components/leaflet.markercluster/dist/leaflet.markercluster-src.js"></script>
@@ -215,7 +215,7 @@
    <script src="bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.min.js"></script>
    <script src="bower_components/underscore/underscore-min.js"></script>
    <script src="bower_components/moment/min/moment.min.js"></script>
-   
+
 
     <!-- polyfiller did not worked concatenated -->
     <script src="bower_components/webshim/js-webshim/minified/polyfiller.js"></script>
