--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -7,11 +7,10 @@
   </title>
   <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
   <link rel="apple-touch-icon" href="images/apple-touch-icon-180x180.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="stylesheet" href="css/custom.css" media="screen" title="no title" charset="utf-8">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
   <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css">
-  <!-- <link rel="stylesheet" href="bower_components/leaflet.markercluster/dist/MarkerCluster.css"> -->
   <link rel="stylesheet" href="bower_components/leaflet.markercluster/dist/MarkerCluster.Default.css">
   <link rel="stylesheet" href="bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.css">
 </head>
