--- a/mbofui/app/text-only.html
+++ b/mbofui/app/text-only.html
@@ -100,18 +100,21 @@
     <div class="alert alert-info" style="margin:10px" ng-show="!textEvents.length" ng-cloak  ng-hide="!online">
       No {{currentView | lowercase}} {{selectedCategory}} events available.
     </div>
-    <div class="container-fluid" style="outline:1px solid red;margin:0;">
+    <div class="container-fluid" style="margin:0;">
       <div ng-repeat="event in textEvents  | orderBy:'startTime'">
         <div class="row" style="border-top:1px solid #ccc">
-          <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+          <!-- <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
             <div style="position:relative;margin-top:5px" class="awesome-marker-icon-{{(event.category | textOnlyCategory).background}} awesome-marker leaflet-zoom-animated leaflet-clickable">
               <i class="glyphicon glyphicon-{{(event.category | textOnlyCategory).icon}} icon-white"></i>
             </div>
-          </div>
+          </div> -->
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="padding:10px">
             <h4 class="list-group-item-heading">{{event.title}}</h4>
             <p class="list-group-metadata">
               {{event.category}}
+              <!-- <div style="position:relative;margin-top:5px" class="awesome-marker-icon-{{(event.category | textOnlyCategory).background}} awesome-marker leaflet-zoom-animated leaflet-clickable">
+                <i class="glyphicon glyphicon-{{(event.category | textOnlyCategory).icon}} icon-white"></i>
+              </div> -->
             </p>
             <p class="list-group-metadata">
               {{event.address}}
@@ -139,7 +142,7 @@
               Your intention: {{event.intention.intention | capitalize}}
             </p>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="text-align:right;padding:10px">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="text-align:right;padding:10px">
             <div ng-show="event.owner==='False' && event.inTime && event.intention">
               <div class="btn-group btn-group-sm">
                 <a href="" ng-if="(event.intention.intention !=='going' || event.intention.intention==='declined') && event.inTime" class="btn btn-primary declareIntentPut" style="color:#fff"  data-intention="going" data-event="{{event.url}}" data-respondent="{{event.intention.respondent}}" data-intention-url="{{event.intention.url}}">
@@ -169,9 +172,9 @@
           </div>
         </div>
         <div class="row" style="padding-bottom:15px">
-          <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-          </div>
-          <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10" style="overflow:hidden">
+          <!-- <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+          </div> -->
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="overflow:hidden">
             {{event.message}}
           </div>
 
