TLMBLGIS-207-3 - resolve conflicts in original branch

--- a/mbofui/app/text-only.html
+++ b/mbofui/app/text-only.html
@@ -141,14 +141,38 @@
         <td class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="text-align:right">
           <div ng-show="event.owner==='False' && event.inTime && event.intention">
             <div class="btn-group btn-group-sm">
-              <a href="" ng-if="(event.intention.intention !=='going' || event.intention.intention==='declined') && event.inTime" class="btn btn-primary declareIntentPut" style="color:#fff"  data-intention="going" data-event="{{event.url}}" data-respondent="{{event.intention.respondent}}" data-intention-url="{{event.intention.url}}">
+              <a href="" ng-if="(event.intention.intention !=='going' || event.intention.intention==='declined') && event.inTime"
+                class="btn btn-primary declareIntentPut"
+                style="color:#fff"
+                data-intention="going"
+                data-event="{{event.url}}"
+                data-respondent="{{event.intention.respondent}}"
+                data-intention-url="{{event.intention.url}}"
+              >
                 Going
               </a>
               <a href="" ng-if="(event.intention.intention==='going'  || event.intention.intention==='declined') && event.inTime" class="btn btn-default declareIntentPut" data-intention="maybe" data-event="{{event.url}}" data-respondent="{{event.intention.respondent}}" data-intention-url="{{event.intention.url}}">
                 Maybe
               </a>
-              <a href="" ng-if="(event.intention.intention==='going' || event.intention.intention==='maybe') && event.inTime" class="btn btn-danger declareIntentPut" data-intention="declined" data-event="{{event.url}}" data-respondent="{{event.intention.respondent}}" data-intention-url="{{event.intention.url}}">
+              <a href="" ng-if="(event.intention.intention==='going' || event.intention.intention==='maybe') && event.inTime && !event.confirmDeclined"
+                class="btn btn-warning declareIntentPut"
+                data-intention="declinedConfirm"
+                data-event="{{event.url}}"
+                data-respondent="{{event.intention.respondent}}"
+                data-intention-url="{{event.intention.url}}"
+              >
                 Not
+              </a>
+              <a href=""
+                class="btn btn-danger declareIntentPut"
+                ng-if="(event.intention.intention==='going' || event.intention.intention==='maybe') && event.inTime && event.confirmDeclined"
+                class="btn btn-danger declareIntentPut"
+                data-intention="declined"
+                data-event="{{event.url}}"
+                data-respondent="{{event.intention.respondent}}"
+                data-intention-url="{{event.intention.url}}"
+              >
+                Confirm
               </a>
             </div>
           </div>
