--- a/mbofui/app/text-only.html
+++ b/mbofui/app/text-only.html
@@ -95,12 +95,12 @@
   <div class="overlay" ng-hide="online">
   </div>
   <div  class="alert alert-danger alertPanel" ng-hide="online" ng-cloak>You are offline</div>
-  <div role="main">
+  <div role="main" style="outline:1px solid blue">
     <div id="text_only"></div>
     <div class="alert alert-info" style="margin:10px" ng-show="!textEvents.length" ng-cloak  ng-hide="!online">
       No {{currentView | lowercase}} {{selectedCategory}} events available.
     </div>
-    <div class="container-fluid" style="margin:0;">
+    <div class="container-fluid" style="margin:0;" >
       <div ng-repeat="event in textEvents  | orderBy:'startTime'">
         <div class="row" style="border-top:1px solid #ccc;padding-top:10px">
           <!-- <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
@@ -108,7 +108,7 @@
               <i class="glyphicon glyphicon-{{(event.category | textOnlyCategory).icon}} icon-white"></i>
             </div>
           </div> -->
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
             <h4 class="list-group-item-heading">{{event.title}}</h4>
             <p class="list-group-metadata">
               {{event.category}}
@@ -126,8 +126,25 @@
                 <a href="" ng-if="(event.intention.intention==='going'  || event.intention.intention==='declined') && event.inTime" class="btn btn-default declareIntentPut" data-intention="maybe" data-event="{{event.url}}" data-respondent="{{event.intention.respondent}}" data-intention-url="{{event.intention.url}}">
                   Maybe
                 </a>
-                <a href="" ng-if="(event.intention.intention==='going' || event.intention.intention==='maybe') && event.inTime" class="btn btn-danger declareIntentPut" data-intention="declined" data-event="{{event.url}}" data-respondent="{{event.intention.respondent}}" data-intention-url="{{event.intention.url}}">
+                <a href="" ng-if="(event.intention.intention==='going' || event.intention.intention==='maybe') && event.inTime && !event.confirmDeclined"
+                  class="btn btn-warning declareIntentPut"
+                  data-intention="declinedConfirm"
+                  data-event="{{event.url}}"
+                  data-respondent="{{event.intention.respondent}}"
+                  data-intention-url="{{event.intention.url}}"
+                 >
                   Not
+                </a>
+                <a href=""
+                  class="btn btn-danger declareIntentPut"
+                  ng-if="(event.intention.intention==='going' || event.intention.intention==='maybe') && event.inTime && event.confirmDeclined"
+                  class="btn btn-danger declareIntentPut"
+                  data-intention="declined"
+                  data-event="{{event.url}}"
+                  data-respondent="{{event.intention.respondent}}"
+                  data-intention-url="{{event.intention.url}}"
+                >
+                  Confirm
                 </a>
               </div>
             </div>
