TLMBLGIS-207-5 - bypass comfirm when on map

--- a/mbofui/app/text-only.html
+++ b/mbofui/app/text-only.html
@@ -95,7 +95,7 @@
   <div class="overlay" ng-hide="online">
   </div>
   <div  class="alert alert-danger alertPanel" ng-hide="online" ng-cloak>You are offline</div>
-  <div role="main" style="outline:1px solid blue">
+  <div role="main">
     <div id="text_only"></div>
     <div class="alert alert-info" style="margin:10px" ng-show="!textEvents.length" ng-cloak  ng-hide="!online">
       No {{currentView | lowercase}} {{selectedCategory}} events available.
