--- a/mbofui/app/text-only.html
+++ b/mbofui/app/text-only.html
@@ -95,6 +95,10 @@
   <div class="overlay" ng-hide="online">
   </div>
   <div  class="alert alert-danger alertPanel" ng-hide="online" ng-cloak>You are offline</div>
+  <div class="alert {{alert.type}} alert-dismissible alertPanel" role="alert" ng-show="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    {{alert.message}}
+  </div>
   <div role="main">
     <div id="text_only"></div>
     <div class="alert alert-info" style="margin:10px" ng-show="!textEvents.length" ng-cloak  ng-hide="!online">
