--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -109,7 +109,10 @@
     <div  class="alert alert-danger alertPanel" ng-hide="online" ng-cloak>You are offline</div>
     <div class="alert {{alert.type}} alert-dismissible alertPanel" role="alert" ng-show="alert">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      {{alert.message}}
+      <p>
+        An error has occurred. Please contact your System Administrator for assistance.
+      </p>
+      <small>{{alert.message}}</small>
     </div>
 
     <div ng-show="!loggedin" class="logo-login">
