--- a/mbofui/app/text-only.html
+++ b/mbofui/app/text-only.html
@@ -97,7 +97,10 @@
   <div  class="alert alert-danger alertPanel" ng-hide="online" ng-cloak>You are offline</div>
   <div class="alert {{alert.type}} alert-dismissible alertPanel" role="alert" ng-show="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    {{alert.message}}
+    <p>
+      An error has occurred. Please contact your System Administrator for assistance.
+    </p>
+    <small>{{alert.message}}</small>
   </div>
   <div role="main">
     <div id="text_only"></div>
