--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -27,7 +27,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <span class="navbar-brand" href="#">Ocellus</span>
+        <span class="navbar-brand" href="#">Ocellus {{alert}} {{alert_dismissed}}</span>
       </div>
 
 
@@ -108,7 +108,7 @@
     </div>
     <div  class="alert alert-danger alertPanel" ng-hide="online" ng-cloak>You are offline</div>
     <div class="alert {{alert.type}} alert-dismissible alertPanel" role="alert" ng-show="alert">
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <button type="button" class="close" aria-label="Close" ng-click="dismissAlert()"><span aria-hidden="true">&times;</span></button>
       <p ng-hide="alert.type !=='alert-danger'">
         An error has occurred. Please contact your System Administrator for assistance.
       </p>
