--- a/mbofui/app/text-only.html
+++ b/mbofui/app/text-only.html
@@ -96,7 +96,7 @@
   </div>
   <div  class="alert alert-danger alertPanel" ng-hide="online" ng-cloak>You are offline</div>
   <div class="alert {{alert.type}} alert-dismissible alertPanel" role="alert" ng-show="alert">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <button type="button" class="close" aria-label="Close" ng-click="dismissAlert()"><span aria-hidden="true">&times;</span></button>
     <p ng-hide="alert.type !=='alert-danger'">
       An error has occurred. Please contact your System Administrator for assistance.
     </p>
