TLMBLGIS-229 - remove some debug

--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -27,7 +27,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <span class="navbar-brand" href="#">Ocellus {{alert}} {{alert_dismissed}}</span>
+        <span class="navbar-brand" href="#">Ocellus</span>
       </div>
 
 
